webinars/2024-06-25/shared-gateway/shared-gateway-staging.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: shared-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: eg
  listeners: 
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: demo-miss-berg
      protocol: HTTPS
      hostname: gateway.demo.missberg.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              purpose: workloads
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: missberg-cert-demo
